# azure-c-shared-utility

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies-test.cmake  dependencies.cmake  nuget.config  thirdpartynotice.txt
c/: CMakeLists.txt
c/adapters/: condition_c11.c  condition_pthreads.c  condition_rtx_mbed.cpp  httpapi_mbed.cpp  httpapi_tirtos.c  httpapi_wince.c  httpapi_wininet.c  lock_c11.c  lock_pthreads.c  lock_win32.c  platform_linux.c  platform_mbed.cpp  platform_stub.c  platform_win32.c  socketio_berkeley.c  socketio_mbed.c  socketio_win32.c  tcpsocketconnection_c.cpp  tcpsocketconnection_c.h  threadapi_rtx_mbed.cpp  threadapi_win32.c  tickcounter_mbed.cpp  tickcounter_win32.c  tlsio_openssl.c  tlsio_schannel.c  tlsio_win32.c  uniqueid_linux.c  uniqueid_stub.c  uniqueid_win32.c  wolfssl_connection.cpp  wolfssl_connection.h
c/devdoc/: condition_requirements.md  constbuffer_requirements.md  constmap_requirements.md  io_requirements.docm  list_requirements.docm  map_requirements.docm  xio_requirements.docm
c/inc/: buffer_.h  condition.h  constbuffer.h  constmap.h  crt_abstractions.h  gb_time.h  httpapi.h  httpapiex.h  httpapiexsas.h  httpheaders.h  iot_logging.h  list.h  macro_utils.h  map.h  platform.h  refcount.h  sastoken.h  socketio.h  string_tokenizer.h  strings.h  tickcounter.h  tlsio.h  tlsio_openssl.h  tlsio_schannel.h  tlsio_wolfssl.h  transport_io.h  vector.h  xio.h  xlogging.h
c/sharedutil/: CMakeLists.txt  readme.txt
c/src/: base64.c  buffer.c  constbuffer.c  constmap.c  crt_abstractions.c  doublylinkedlist.c  gb_stdio.c  gballoc.c  hmacsha256.c  httpapiexsas.c  list.c  map.c  sastoken.c  sha384-512.c  string_tokenizer.c  strings.c  tickcounter.c  tlsio_openssl.c  tlsio_schannel.c  tlsio_wolfssl.c  transport_io.c  urlencode.c  vector.c  xio.c
c/tests/: CMakeLists.txt
c/testtools/: CMakeLists.txt
samples/: CMakeLists.txt
samples/azure_c_shared_hello_world/: CMakeLists.txt  main.c
samples/http_proxy_tlsio_connect/: CMakeLists.txt  main.c
samples/http_proxy_use_tlsio_connect/: CMakeLists.txt  main.c
samples/iot_c_utility/: CMakeLists.txt  iot_c_utility.c
samples/socketio_connect/: CMakeLists.txt  main.c
samples/tlsio_connect/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  valgrind_suppressions.supp
tests/agenttime_unittests/: CMakeLists.txt  agenttime_unittests.c  agenttime_unittests.cpp
tests/agenttime_ut/: CMakeLists.txt  agenttime_ut.c  main.c
tests/azure_base32_ut/: CMakeLists.txt  azure_base32_ut.c  main.c
tests/azure_base64_ut/: CMakeLists.txt  azure_base64_ut.c
tests/base32_ut/: CMakeLists.txt  base32_ut.c
tests/base64_unittests/: CMakeLists.txt  base64_unittests.c  base64_unittests.cpp
tests/base64_ut/: CMakeLists.txt  base64_ut.c
tests/buffer_unittests/: CMakeLists.txt  buffer_unittests.c  buffer_unittests.cpp
tests/buffer_ut/: CMakeLists.txt  buffer_ut.c
tests/circular_buffer_ut/: CMakeLists.txt  circular_buffer_ut.c  main.c
tests/condition_unittests/: CMakeLists.txt  condition_unittests.c  condition_unittests.cpp
tests/condition_ut/: CMakeLists.txt  condition_ut.c
tests/connectionstringparser_ut/: CMakeLists.txt  connectionstringparser_ut.c  connectionstringparser_ut.cpp
tests/constbuffer_array_batcher_ut/: CMakeLists.txt  constbuffer_array_batcher_ut.c
tests/constbuffer_array_ut/: CMakeLists.txt  constbuffer_array_ut.c  main.c
tests/constbuffer_unittests/: CMakeLists.txt  constbuffer_unittests.c  constbuffer_unittests.cpp
tests/constbuffer_ut/: CMakeLists.txt  constbuffer_ut.c
tests/constmap_unittests/: CMakeLists.txt  constmap_unittests.c  constmap_unittests.cpp
tests/constmap_ut/: CMakeLists.txt  constmap_ut.c
tests/crtabstractions_unittests/: CMakeLists.txt  crtabstractions_unittests.c  crtabstractions_unittests.cpp
tests/crtabstractions_ut/: CMakeLists.txt  crtabstractions_ut.c
tests/dns_async_ut/: CMakeLists.txt  dns_async_ut.c  main.c
tests/dns_resolver_ut/: CMakeLists.txt  dns_resolver_ut.c  main.c
tests/doublylinkedlist_unittests/: CMakeLists.txt  doublylinkedlist_unittests.c  doublylinkedlist_unittests.cpp
tests/doublylinkedlist_ut/: CMakeLists.txt  doublylinkedlist_ut.c
tests/gballoc_unittests/: CMakeLists.txt  gballoc_unittests.c  gballoc_unittests.cpp
tests/gballoc_ut/: CMakeLists.txt  gballoc_ut.c
tests/gballoc_without_init_unittests/: CMakeLists.txt  gballoc_without_init_unittests.c  gballoc_without_init_unittests.cpp
tests/gballoc_without_init_ut/: CMakeLists.txt  gballoc_without_init_ut.c  main.c
tests/hmacsha256_unittests/: CMakeLists.txt  hmacsha256_unittests.c  hmacsha256_unittests.cpp
tests/hmacsha256_ut/: CMakeLists.txt  hmacsha256_ut.c
tests/http_proxy_io_ut/: CMakeLists.txt  http_proxy_io_ut.c
tests/httpapicompact_ut/: CMakeLists.txt  httpapicompact_ut.c
tests/httpapiex_unittests/: CMakeLists.txt  httpapiex_unittests.c  httpapiex_unittests.cpp
tests/httpapiex_ut/: CMakeLists.txt  httpapiex_ut.c
tests/httpapiexsas_unittests/: CMakeLists.txt  httpapiexsas_unittests.c  httpapiexsas_unittests.cpp
tests/httpapiexsas_ut/: CMakeLists.txt  httpapiexsas_ut.c
tests/httpheaders_unittests/: CMakeLists.txt  httpheaders_unittests.c  httpheaders_unittests.cpp
tests/httpheaders_ut/: CMakeLists.txt  httpheaders_ut.c
tests/list_unittests/: CMakeLists.txt  list_unittests.c  list_unittests.cpp
tests/list_ut/: CMakeLists.txt
tests/lock_unittests/: CMakeLists.txt  lock_unittests.c  lock_unittests.cpp
tests/lock_ut/: CMakeLists.txt  lock_ut.c  main.c
tests/logging_ut/: CMakeLists.txt
tests/map_unittests/: CMakeLists.txt  map_unittests.c  map_unittests.cpp
tests/map_ut/: CMakeLists.txt  map_ut.c
tests/memory_data_ut/: main.c  memory_data_ut.c
tests/optionhandler_unittests/: CMakeLists.txt  main.c  optionhandler_unittests.c
tests/optionhandler_ut/: CMakeLists.txt  optionhandler_ut.c
tests/platform_win32_ut/: CMakeLists.txt  platform_win32_ut.c
tests/platformarduino_ut/: CMakeLists.txt  main.c  platformarduino_ut.c
tests/real_test_files/: real_base64.c  real_buffer.c  real_constbuffer.c  real_constbuffer.h  (+2 more)
(+1095 files in other folders)
